--- a/pom.xml
+++ b/pom.xml
@@ -64,9 +64,9 @@
 
     <distributionManagement>
         <repository>
-            <id>nexus</id>
-            <name>maven-test</name>
-            <url>http://192.168.1.76:8078/repository/maven-test/</url>
+            <id>${id}</id>
+            <name>${name}</name>
+            <url>${url}</url>
         </repository>
     </distributionManagement>
 
