new docker package

--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
                 <groupId>io.fabric8</groupId>
                 <artifactId>docker-maven-plugin</artifactId>
                 <version>0.40.1</version>
-                <extensions>true</extensions>
+                <!--<extensions>true</extensions>
                 <executions>
                     <execution>
                         <id>docker-push</id>
@@ -50,8 +50,9 @@
                             <goal>push</goal>
                         </goals>
                     </execution>
-                </executions>
+                </executions>-->
                 <configuration>
+                    <verbose>true</verbose>
                     <autoPull>true</autoPull>
                     <registry>192.168.1.76:8085</registry>
                     <images>
@@ -60,8 +61,9 @@
                             <build>
                                 <assembly>
                                     <descriptorRef>artifact</descriptorRef>
-                                    <targetDir>target</targetDir>
+                                    <!--<targetDir>target</targetDir>-->
                                 </assembly>
+                                <dockerFile>Dockerfile</dockerFile>
                             </build>
                         </image>
                     </images>
